--- a/PCB/.gitignore
+++ b/PCB/.gitignore
@@ -14,6 +14,9 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
+fp-lib-table
+sym-lib-table
+
 
 # Netlist files (exported from Eeschema)
 *.net
